Implemented front-end logic.